--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-table": "^8.16.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
