--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,6 +1,6 @@
 FROM mysql:8.0.0
 
-COPY init.sql /docker-entrypoint-initdb.d/
+COPY *.sql /docker-entrypoint-initdb.d/
 
 ENV MYSQL_ROOT_PASSWORD=root
 
